[package]
name = "logsdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skiplist = "0.4.0"
actix-web = "4.1.0"
serde = { version = "1.0.138", features = ["derive"] }
log = "0.4.17"
base64 = "0.13.0"
serde_json = "1.0.82"
